<resources>
    <string name="app_name">AGP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_best_splash_screen">BestSplashScreen</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_accueil_notification">AccueilNotification</string>
    <string name="title_activity_accueil_tache">AccueilTache</string>
    <string name="title_activity_pojet_selection">PojetSelection</string>
    <string name="title_activity_projet_accueil">ProjetAccueil</string>
    <string name="title_activity_projet_details">ProjetDetails</string>
    <string name="title_activity_projet_tache">ProjetTache</string>
    <string name="title_activity_projet_collaborateur">ProjetCollaborateur</string>
    <string name="title_activity_projet_document">ProjetDocument</string>
    <string name="title_activity_projet_message">ProjetMessage</string>
    <string name="title_activity_projet_budget">ProjetBudget</string>
    <string name="title_activity_projet_planning">ProjetPlanning</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_projet_create">ProjetCreate</string>

    <string name="general_processing">Processing</string>
    <string name="general_validate">Validate</string>
    <string name="general_connect_error">Error: coudn\'t connect to the database</string>
    <string name="general_connect_not_found">Couldn\'t find you in the database\nPlease check you login and password</string>

    <string name="general_login">Login</string>
    <string name="general_password">Password</string>
    <string name="general_connecting">Connecting...</string>
    <string name="general_verifing_infos">Trying to verify your informations</string>
    <string name="general_creator">Made by Godefroy POIRIER and Sylvain LOIZEAU</string>

    <!-- BestSplashScreen Strings -->
    <string name="bestSplashScreen_connect_not_found">Couldn\'t find you in the database\nPlease check you login and password</string>
    <string name="bestSplashScreen_Create_user">Create User</string>

    <!-- ProjectCreate Strings -->
    <string name="projectCreate_createNewProject">Create a new project</string>
    <string name="projectCreate_titleProject">Title :</string>
    <string name="projectCreate_DescProject">Description :</string>
    <string name="projectCreate_budgetProject">Previsionnal budget :</string>
    <string name="projectCreate_budgetFinProjet">Previsionnal ending budget :</string>
    <string name="dateDProjet">Starting date :</string>
    <string name="dateFProjet">Ending date :</string>
    <string name="title_activity_tache_create">TacheCreate</string>
    <string name="projectCreate_create_of_ATask">Create a task</string>
    <string name="projectCreate_creating_project">Create a project</string>

    <!-- CreateUser Strings -->
    <string name="createUser_adding_user">The user already exist</string>
    <string name="createUser_already_exist">The user already exist</string>
    <string name="createUser_user_added">User added</string>
    <string name="TaskCreate_title">Task title</string>
    <string name="TaskCreate_description">Description</string>
    <string name="TaskCreate_Time">Time</string>
    <string name="TaskCreate_starting_date">Starting date</string>
    <string name="TaskCreate_ending_date">Ending date</string>
    <string name="TaskCreate_task_added">Task added</string>
    <string name="TaskCreate_adding_task">Adding task</string>

</resources>
