<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="m1isi.apptest.CreateUser">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_validate"
        android:id="@+id/CreateUserButtonValidate"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/CreateUserPasswordEditText"
        android:layout_above="@+id/CreateUserButtonValidate"
        android:layout_alignLeft="@+id/CreateUserButtonValidate"
        android:layout_alignStart="@+id/CreateUserButtonValidate"
        android:layout_marginBottom="36dp"
        android:password="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CreateUserLoginEditText"
        android:layout_above="@+id/CreateUserPasswordEditText"
        android:layout_alignLeft="@+id/CreateUserPasswordEditText"
        android:layout_alignStart="@+id/CreateUserPasswordEditText"
        android:layout_marginBottom="41dp"
        android:layout_alignRight="@+id/CreateUserPasswordEditText"
        android:layout_alignEnd="@+id/CreateUserPasswordEditText"
        android:text="@string/general_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/general_login"
        android:id="@+id/CreateUserLoginTextView"
        android:layout_toLeftOf="@+id/CreateUserLoginEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/CreateUserLoginEditText"
        android:layout_alignBottom="@+id/CreateUserLoginEditText"
        android:layout_alignParentEnd="false"
        android:textAlignment="center"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/general_password"
        android:id="@+id/CreateUserPasswordTextView"
        android:layout_alignTop="@+id/CreateUserPasswordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/CreateUserPasswordEditText"
        android:layout_toLeftOf="@+id/CreateUserPasswordEditText"
        android:layout_toStartOf="@+id/CreateUserPasswordEditText"
        android:textSize="25dp"
        android:textAlignment="center" />

</RelativeLayout>
